service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: suzieq
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
  labels:
    app: suzieq
spec:
  ports:
  - port: 8000
    name: sq-rest
  - port: 8501
    name: sq-gui
  type: LoadBalancer
  selector:
    app: suzieq
